--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
                         <a href="#demo" class="btn btn-primary btn-lg">
                             <i class="fas fa-play me-2"></i>Try Demo
                         </a>
-                        <a href="#algorithms" class="btn btn-outline-light btn-lg">
-                            <i class="fas fa-code me-2"></i>View Code
+                        <a href="https://github.com/rahimaathar/AI-pathfinding-gameTheory" target="_blank" class="btn btn-outline-light btn-lg">
+                            <i class="fab fa-github me-2"></i>View Code
                         </a>
                     </div>
                 </div>
